hide skills section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
+                <li><a href="#teams" class="menu-btn">Testimonials</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -94,7 +94,7 @@
         </div>
     </section>
 
-    <!-- skills section start -->
+    <!-- skills section start
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title">My skills</h2>
@@ -143,12 +143,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- testimonialss section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Portfolio</h2>
+            <h2 class="title">Testimonials</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
@@ -160,21 +160,21 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Project 2</div>
+                        <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Project 3</div>
+                        <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Project 4</div>
+                        <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
