--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
-                <li><a href="#teams" class="menu-btn">Testimonials</a></li>
+                <li><a href="#teams" class="menu-btn">Portfolio</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Oby Manyando</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#">Work with me</a>
             </div>
         </div>
     </section>
@@ -148,7 +148,7 @@
     <!-- testimonialss section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Testimonials</h2>
+            <h2 class="title">Portfolio</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
