--- a/index.html
+++ b/index.html
@@ -152,35 +152,40 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpg" alt="">
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+1" alt="project-1"></a>
+                        <!-- <img src="images/profile-1.jpg" alt=""> -->
                         <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+2" alt="project-2"></a>
+                        <!-- <img src="images/profile-2.jpeg" alt=""> -->
                         <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
+                        <!-- <img src="images/profile-3.jpeg" alt=""> -->
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+3" alt="project-3"></a>
                         <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
+                        <!-- <img src="images/profile-4.jpeg" alt=""> -->
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+4" alt="project-4"></a>
                         <div class="text">Project 1</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
+                        <!-- <img src="images/profile-5.jpeg" alt=""> -->
+                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+5" alt="project-5"></a>
                         <div class="text">Project 5</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
