add download cv

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
-                <!-- <li><a href="#skills" class="menu-btn">Skills</a></li> -->
                 <li><a href="#teams" class="menu-btn">Portfolio</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -50,7 +49,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Oby Manyando</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Work with me</a>
+                <a href="#contact">Work with me</a>
             </div>
         </div>
     </section>
@@ -65,8 +64,13 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Oby and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <p>I develop front-end Web applications with JavaScript and React. I also help my clients host their applications on the AWS cloud. Technologies used: React, JavaScript, ES6, TypeScript, SASS, AWS CloudFormation, Amplify & Route 53.<br /> <br />
+                    I also help Finnish companies enter the Southern African market using Namibia as a stable gateway. The Southern African market is made up of almost 300 million people. For Finnish companies, accessing this market through Namibia is a natural choice given the 150-year relationship the two have.<br />
+                    </p>
+                    <a href="images/cv/Oby-CV-Dev.pdf" download="Oby_CV">
+                        <button type="button">Download CV</button>
+                    </a>
+                    </a>
                 </div>
             </div>
         </div>
@@ -81,114 +85,61 @@
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Web Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>I develop front-end Web applications with JavaScript and React. Tech stack: React, JavaScript, TypeScript, Amplify.</p>
+                    </div>
+                </div> 
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Business Consulting</div>
+                        <p>I help Finnish companies enter the Southern African market, using Namibia as a stable gateway. </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-tasks"></i>
-                        <div class="text">Product Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <div class="text">Volunteering</div>
+                        <p>I am active member of Think Africa, a Finnish NGO that strives to empower the diaspora community.</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Business Consulting</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
+               
                </div>
             </div>
         </div>
     </section>
 
-    <!-- skills section start
-    <section class="skills" id="skills">
-        <div class="max-width">
-            <h2 class="title">My skills</h2>
-            <div class="skills-content">
-                <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.</p>
-                    <a href="#">Read more</a>
-                </div>
-                <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>React.js</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Google Firebase</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- testimonialss section start -->
+    <!-- portfolio section start -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">Portfolio</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+1" alt="project-1"></a>
-                        <!-- <img src="images/profile-1.jpg" alt=""> -->
-                        <div class="text">Project 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/portfolio-thumbnails/wonder-woman84.jpg" alt="movie db">
+                        <div class="text">Movie Database</div>
+                        <p>Movie searching app using The Movie Database API.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+2" alt="project-2"></a>
-                        <!-- <img src="images/profile-2.jpeg" alt=""> -->
-                        <div class="text">Project 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/portfolio-thumbnails/portfolio.png" alt="portfolio">
+                        <div class="text">Personal Website</div>
+                        <p>I am rebuilding this Website with React.js.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <!-- <img src="images/profile-3.jpeg" alt=""> -->
-                        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+3" alt="project-3"></a>
-                        <div class="text">Project 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/portfolio-thumbnails/users-app.png" alt="user-cards">
+                        <div class="text">User Cards</div>
+                        <p>User info. Uses react three React Hooks and route-router.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <!-- <img src="images/profile-4.jpeg" alt=""> -->
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+4" alt="project-4"></a>
-                        <div class="text">Project 1</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Project 4</div>
+                        <p>Coming soon.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -196,7 +147,7 @@
                         <!-- <img src="images/profile-5.jpeg" alt=""> -->
                         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350x150.png/45829a?text=Project+5" alt="project-5"></a>
                         <div class="text">Project 5</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Coming soon.</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +161,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>Is there something I can do for you? Do you want to build something together? Drop me a message. And, if you're in the Helsinki area, we might grab a coffee...Covid-19 considered.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -257,13 +208,18 @@
                         </div>
                     </form>
                 </div>
+                <div class="column far-right">
+                    <div class="text">Follow me on LinkedIn</div>
+                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="obymanyando"><a class="LI-simple-link" href='https://fi.linkedin.com/in/obymanyando?trk=profile-badge'>Oby Manyando</a></div>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.obymanyando.com">Oby Manyando</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.obymanyando.com">Oby Manyando</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <!-- Scripts -->
