--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="column right">
+                <div class="typeform-widget" data-url="https://form.typeform.com/to/H4oX5aTm?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="false" style="width: 35%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                <!-- <div class="column right">
                     <div class="text">Message me</div>
                     <form action="#" class="contact-form">
                         <div class="fields" >
@@ -204,10 +205,10 @@
                             <textarea cols="30" rows="10" id="message"placeholder="Message.." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit">Send message</button>
+                            <button onclick="alert" type="submit">Send message</button>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <div class="column far-right">
                     <div class="text">Follow me on LinkedIn</div>
                     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
