remove excess info in contact

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/portfolio-thumbnails/wonder-woman84.jpg" alt="movie db">
+                        
+                        <a href="https://movies-now.netlify.app/" target="blank">
+                            <img src="images/portfolio-thumbnails/wonder-woman84.jpg" alt="movie db">
+                        </a>
                         <div class="text">Movie Database</div>
                         <p>Movie searching app using The Movie Database API.</p>
                     </div>
@@ -129,7 +132,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/portfolio-thumbnails/users-app.png" alt="user-cards">
+                        <a href='https://users-integr.netlify.app/' target='blank'>
+                        <img src="images/portfolio-thumbnails/users-app.png" alt="user-cards"></a>
+                        
                         <div class="text">User Cards</div>
                         <p>User info. Uses react three React Hooks and route-router.</p>
                     </div>
@@ -159,9 +164,10 @@
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
-                <div class="column left">
+                 <div class="typeform-widget" data-url="https://form.typeform.com/to/H4oX5aTm?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="false" style="width: 45%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                <!-- <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Is there something I can do for you? Do you want to build something together? Drop me a message. And, if you're in the Helsinki area, we might grab a coffee...Covid-19 considered.</p>
+                    <p>Is there something I can do for you? Do you want to build something together? Drop me a message. And, if you're in the Helsinki area, we might grab a coffee.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -185,34 +191,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="typeform-widget" data-url="https://form.typeform.com/to/H4oX5aTm?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="false" style="width: 35%; height: 350px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-                <!-- <div class="column right">
-                    <div class="text">Message me</div>
-                    <form action="#" class="contact-form">
-                        <div class="fields" >
-                            <div class="field name">
-                                <input type="text" id="name" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" id="email"placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" id="subject"placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" id="message"placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button">
-                            <button onclick="alert" type="submit">Send message</button>
-                        </div>
-                    </form>
                 </div> -->
                 <div class="column far-right">
                     <div class="text">Follow me on LinkedIn</div>
                     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="obymanyando"><a class="LI-simple-link" href='https://fi.linkedin.com/in/obymanyando?trk=profile-badge'>Oby Manyando</a></div>
+                    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="obymanyando"><a class="LI-simple-link" href='https://fi.linkedin.com/in/obymanyando?trk=profile-badge' target="blank">Oby Manyando</a></div>
                 </div>
             </div>
         </div>
