--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">O<span>M!</span></a></div>
+            <div class="logo"><a href="#home">O<span>M!</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -99,7 +99,7 @@
                     <div class="box">
                         <i class="fas fa-tasks"></i>
                         <div class="text">Volunteering</div>
-                        <p>I am active member of Think Africa, a Finnish NGO that strives to empower the diaspora community.</p>
+                        <p>I am active member of <span class="think-africa"><a href="http://www.thinkafrica.fi/" target="blank">Think Africa</a></span>, a Finnish NGO that strives to empower the diaspora community.</p>
                     </div>
                 </div>
                
