add cv to git ignore

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>I develop front-end Web applications with JavaScript and React. I also help my clients host their applications on the AWS cloud. Technologies used: React, JavaScript, ES6, TypeScript, SASS, AWS CloudFormation, Amplify & Route 53.<br /> <br />
                     I also help Finnish companies enter the Southern African market using Namibia as a stable gateway. The Southern African market is made up of almost 300 million people. For Finnish companies, accessing this market through Namibia is a natural choice given the 150-year relationship the two have.<br />
                     </p>
-                    <a href="cv/Oby-CV-Dev.pdf" download="Oby_CV">
+                    <a target='blank' href="cv/Oby-CV-Dev.pdf" download="Oby_CV">
                         <button type="button">Download CV</button>
                     </a>
                     </a>
