update typeform and media queries

--- a/index.html
+++ b/index.html
@@ -176,33 +176,7 @@
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
                  <div class="typeform-widget" data-url="https://form.typeform.com/to/H4oX5aTm?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="false" style="width: 45%; height: 360px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-                <!-- <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Is there something I can do for you? Do you want to build something together? Drop me a message. And, if you're in the Helsinki area, we might grab a coffee.</p>
-                    <div class="icons">
-                        <div class="row">
-                            <i class="fas fa-user"></i>
-                            <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Oby Manyando</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Helsinki, Finland</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">oby@obymanyando.com</div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+               
                 <div class="column far-right">
                     <div class="text">Follow me on LinkedIn</div>
                     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
@@ -213,8 +187,8 @@
     </section>
 
     <!-- footer section start -->
-    <footer>
-        <span>Created By <a href="https://www.obymanyando.com">Oby Manyando</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+    <footer class="footer">
+        <span>Created By <a href="https://www.github.com/obymanyando" target="blank">Oby Manyando</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <!-- Scripts -->
