update portflio section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="box">
                         
                         <a href="https://movies-now.netlify.app/" target="blank">
-                            <img src="images/portfolio-thumbnails/wonder-woman84.jpg" alt="movie db">
+                            <img src="images/portfolio-thumbnails/Movie-db.png" alt="movie db">
                         </a>
                         <div class="text">Movie Database</div>
                         <p>Movie searching app using The Movie Database API.</p>
